Fix accessible touch exploration inside of iframes.

Now that we've switched to one accessibiliy tree per iframe, the previous
hit testing code broke. Previously we send a message to the top frame with
the point and it fired a HOVER event on the target node. Now if the target
node has a child frame, it sends a response IPC to the browser so it can
redispatch the hit test on the child frame and keep drilling down until it
reaches a leaf node.

Note: all of the changes made in this patch are appropriate for OOPIF,
however it's unclear if the coordinate transformation will work correctly
in that case. Waiting on a resolution to crbug.com/459591 before fixing
that, but since there are no plans to use OOPIF on Android right now this
isn't as urgent.

BUG=596101
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:linux_site_isolation

Review URL: https://codereview.chromium.org/1836113002

Cr-Commit-Position: refs/heads/master@{#384520}

Former-commit-id: a04ec0570cf902b3714fee07ffe3361fd80dfa16